--- a/package.json
+++ b/package.json
@@ -13,18 +13,21 @@
     "@emotion/cache": "^11.11.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@hookform/resolvers": "^3.3.1",
     "@mui/icons-material": "^5.14.9",
     "@mui/lab": "^5.0.0-alpha.145",
     "@mui/material": "^5.14.10",
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.5.0",
     "bcryptjs": "^2.4.3",
+    "js-cookie": "^3.0.5",
     "mongodb": "^6.1.0",
     "mongoose": "^7.5.2",
     "next": "13.5.2",
     "next-auth": "^4.23.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.46.2",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
     "react-redux": "^8.1.2",
@@ -32,7 +35,8 @@
     "react-slideshow-image": "^4.2.1",
     "redux-persist": "^6.0.0",
     "sass": "^1.68.0",
-    "swr": "^2.2.2"
+    "swr": "^2.2.2",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.4",
